# anime-rss

./: .gitignore  CLAUDE.md  LICENSE  README.md  anime-rss.spec  app.py  build_exe.bat  config.example.yaml  gui_main.py  main.py  potplayer_tracker.as  pyproject.toml  run_app.py  watch_history.json  zhuifanji.spec
.github/workflows/: ci.yml
docs/wiki/: 新手教程.md
gui/: __init__.py  main.py  selftest.py  themes.py
gui/qt/: __init__.py  workers.py
gui/services/: __init__.py  config_service.py  cover_service.py  cover_sync_service.py  media_service.py  subscription_service.py  update_service.py
gui/views/: __init__.py  dashboard_page.py  main_window.py  media_library_page.py  onboarding_dialog.py  quarter_cleanup_page.py  season_subscription_page.py  settings_page.py  subscription_management_page.py
gui/views/widgets/: cover_card.py  priority_list.py
pages/: 1_📺_季度订阅.py  2_📋_订阅管理.py  3_🗑️_季度清理.py  4_⚙️_设置.py  5_🎬_媒体库.py
src/qbt/: client.py
src/scrapers/: mikanani.py  yuc_wiki.py
src/utils/: config.py  cover_cache.py  crash_handler.py  file_parser.py  potplayer.py  runtime_paths.py  season.py  state.py  ui_refresh.py  watch_progress.py
tests/: test_cover_service.py  test_cover_sync_service.py  test_file_parser.py  test_media_service.py  test_mikanani.py  test_qbt_client.py  test_runtime_paths.py  test_season.py  test_state.py  test_subscription_service.py  test_update_service.py  test_watch_progress.py
