[project]
name = "zhuifanji"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "pillow>=12.2.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "qbittorrent-api>=2024.1",
    "requests>=2.34.2",
    "scrapling>=0.4.8",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.14",
]
gui = [
    "pyqt6>=6.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
